# spacescan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  work.lnk
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: scan_bench.rs
docs/: ROADMAP.md  SCREENSHOTS.md
src/: bench.rs  cli.rs  constants.rs  deletion.rs  export.rs  format.rs  lib.rs  main.rs  metric.rs  node.rs  picker.rs  reclaim.rs  report.rs  reveal.rs  runner.rs  scan.rs  stats.rs  theme.rs  tui.rs  util.rs
tests/: bench.rs  cli.rs  deletion.rs  export.rs  format.rs  metric.rs  picker.rs  reclaim.rs  report.rs  runner.rs  scan.rs  stats.rs  tui.rs  util.rs
