[package]
name = "spacescan"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
description = "Fast parallel disk-usage analyzer with an interactive TUI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/anike/spacescan"
homepage = "https://github.com/anike/spacescan"
keywords = ["disk-usage", "tui", "cleanup", "scanner", "windows"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    "benchmark-results/**",
    "dist/**",
    "*.exe",
    "*.o",
    "*.pdb",
    "*.rcgu.o",
    "Cargo.toml.orig",
    "spacescan-sizeof*",
]

[[bin]]
name = "spacescan"
path = "src/main.rs"

[lib]
name = "spacescan"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
mimalloc = "0.1.52"
thin-vec = "0.2"
trash = "5"
sysinfo = "0.32"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_ProcessStatus", "Win32_System_Threading"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "scan_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true
